--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -10,6 +10,21 @@
 # overridden by providing a weight value. The menu will then be
 # ordered by weight from lowest to highest.
 
+[[main]]
+  name = "Home"
+  pageRef = "/"
+  weight = 1
+
+[[main]]
+  name = "Education"
+  pageRef = "education"
+  weight = 2
+
+[[main]]
+  name = "Projects"
+  pageRef = "projects"
+  weigth = 3
+
 #[[main]]
 #  name = "Blog"
 #  pageRef = "posts"
