Education Section added

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -8,7 +8,7 @@ disableTextInHeader = false
 highlightCurrentMenuArea = true
 
 [header]
-layout = "fixed"
+layout = "basic"
 
 [footer]
 showMenu = true
