--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,7 +6,7 @@ enableCodeCopy = false
 disableImageOptimization = false
 disableTextInHeader = false
 highlightCurrentMenuArea = true
-defaultBackgroundImage = "wallpaper3.png"
+defaultBackgroundImage = "wallpaper3-min.png"
 
 [header]
 layout = "basic"
@@ -27,7 +27,7 @@ showMoreLinkDest = "/posts"
 cardView = false
 cardViewScreenWidth = false
 layoutBackgroundBlur = false
-homepageImage = "wallpaper2.png"
+homepageImage = "wallpaper2-min.png"
 
 [article]
 showDate = true
