--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -1,7 +1,7 @@
 languageCode = "en"
 languageName = "English"
 weight = 1
-title = "Denast"
+title = "denast.dev"
 
 [params]
 displayName = "EN"
@@ -10,7 +10,7 @@ rtl = false
 dateFormat = "2 January 2006"
 #logo = "denastlogo_round.png"
 
-[author]
+[params.author]
 name = "Denast"
 headline = "Konstantin Vasilyev"
 image = "denastlogo_round.png"
@@ -50,7 +50,7 @@ links = [
 #  { snapchat = "https://snapchat.com/add/username" },
 #  { soundcloud = "https://soundcloud.com/username" },
 #  { stack-overflow = "https://stackoverflow.com/users/userid/username" },
-  { steam = "https://steamcommunity.com/id/thedenast" },
+  # { steam = "https://steamcommunity.com/id/thedenast" },
   { telegram = "https://t.me/thedenast" },
 #  { threads = "https://www.threads.net/@username" },
 #  { tiktok = "https://tiktok.com/@username" },
